<resources>
    <string name="app_name">Popular Movies</string>
    <string name="detail_label">Movie Detail</string>
    <string name="action_most_popular">Popular Movies</string>
    <string name="action_top_rated">Top Rated Movies</string>
    <string name="action_favorites">My Favorites</string>

    <string name="error_message">
        No Movies Found.
    </string>

    <!-- Detail Activity-->
    <string name="detail_original_title_label">Title:</string>
    <string name="detail_overview_label">Plot Synopsis:</string>
    <string name="detail_vote_average_label">User Rating:</string>
    <string name="detail_release_date_label">Release Date:</string>
    <string name="detail_favorite_off">🖤</string>
    <string name="detail_favorite_on">♥</string>
    <string name="detail_reviews_label">Reviews:</string>
    <string name="detail_videos_label">Videos:</string>

    <!-- Content descriptions-->
    <string name="movie_poster_content_description">Movie poster</string>
    <string name="movie_backdrop_content_description">Movie backdrop</string>

    <string name="content_authority">net.tuanpham.popularmovies</string>
</resources>
