<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/sv_detail"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.constraint.ConstraintLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_poster_path"
            android:layout_width="185dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/movie_poster_content_description"
            android:scaleType="centerCrop"
            android:layout_height="277dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:id="@+id/tv_original_title_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_original_title_label"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/iv_poster_path"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            />

        <TextView
            android:id="@+id/tv_original_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="The Dark Knight"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="120dp"
            android:layout_marginLeft="120dp"
            app:layout_constraintTop_toBottomOf="@id/iv_poster_path"
            android:layout_marginTop="16dp"
            />


        <TextView
            android:id="@+id/tv_vote_average_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_vote_average_label"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/tv_original_title"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp" />


        <TextView
            android:id="@+id/tv_vote_average"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="3.14"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="120dp"
            android:layout_marginLeft="120dp"
            app:layout_constraintTop_toBottomOf="@id/tv_original_title"
            android:layout_marginTop="16dp"
            />

        <TextView
            android:id="@+id/tv_release_date_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail_release_date_label"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/tv_vote_average"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            />

        <!--https://stackoverflow.com/questions/37603751/set-width-to-match-constraints-in-constraintlayout-->
        <!--android:background="@drawable/back"-->
        <TextView
            android:id="@+id/tv_release_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="2019-09-09"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="120dp"
            android:layout_marginLeft="120dp"
            app:layout_constraintTop_toBottomOf="@id/tv_vote_average"
            android:layout_marginTop="16dp"
            />

        <TextView
            android:id="@+id/tv_overview_label_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="16dp"
            android:text="@string/detail_overview_label"
            android:textStyle="bold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_release_date" />

        <TextView
            android:id="@+id/tv_overview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="120dp"
            android:layout_marginLeft="120dp"
            android:layout_marginTop="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_release_date"
            tools:text="List of ingredients" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>
